# Simulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
OpenGL/: CMakeLists.txt
OpenGL/src/: CMakeLists.txt  Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  glad.c
Output/res/shaders/: 1.colors.shader  1.light_cube.shader  Basic.shader  DepthTest.shader
Test/: CMakeLists.txt  Test.cpp  Test.h  TestCamera.cpp  TestCamera.h  TestClearColor.cpp  TestClearColor.h  TestDepthTest.cpp  TestDepthTest.h  TestLight.cpp  TestLight.h  TestMain.cpp  TestTexture2D.cpp  TestTexture2D.h  TestUtils.cpp  TestUtils.h
